# tarfs

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  README.md  ar.tar
.github/workflows/: ci.yml
src/: arena.rs  indexer.rs  lib.rs  main.rs  tarfs.rs  tarindex.rs  tarindexer.rs  utils.rs
src/lib/: mod.rs  tarfs.rs  tarindex.rs
tests/: ar.tar  common.rs  tarfs_test.rs  tarfstest.rs
tests/ar.dir/: cat-ln
tests/ar.dir/dir1/: a1  b1
