[package]
name = "tarfs"
version = "0.1.0"
authors = ["geropl <gero.posmyk-leinemann@typefox.io>"]
edition = "2018"

[lib]
name = "tarfslib"
path = "src/lib.rs"

[[bin]]
name = "tarfs"
path = "src/main.rs"

[dependencies]
fuse = "0.3.1"
tar = "0.4.26"
time = "0.1.42"
libc = "0.2.60"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
env_logger = "0.6.2"

[dev-dependencies]
pretty_assertions = "0.6.1"
