[package]
name = "tarfs"
version = "0.1.0"
authors = ["geropl <gero.posmyk-leinemann@typefox.io>"]
edition = "2018"

[lib]
name = "tarfslib"
path = "src/lib.rs"

[[bin]]
name = "tarfs"
path = "src/main.rs"

[dependencies]
fuse = { git = "https://github.com/geropl/rust-fuse", branch = "0.3.1-nolibc", default-features = false, features = ["no-libc"] }
tar = "0.4.26"
time = "0.1.42"
libc-unix-shim = { git = "https://github.com/geropl/rs-libc-unix-shim", branch = "master" }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
env_logger = "0.6.2"
clap = "2"
failure = "0.1.5"

[dev-dependencies]
pretty_assertions = "0.6.1"
walkdir = "2"
